# dsharp_opac

./: .gitignore  MANIFEST.in  README.md  environment.yml  lp_opac.py  meson.build  pyproject.toml  requirements.txt  setup.py
dsharp_opac/: __init__.py  bhmie_fortran.f90  bhmie_python.py  dsharp_opac.py  meson.build
dsharp_opac/data/: Kataoka2014-Fig2b-1e-5cm.csv  Kataoka2014-Fig2d-1e-5cm.csv  default_opacities.npz  default_opacities_extrapol.npz  default_opacities_smooth.npz  icefree_opacities.npz  icefree_opacities_smooth.npz  kappa_D01_T100K_p3.5_amax1mm.csv  kataoka_mix.lnk  meson.build  ricci_compact.npz
dsharp_opac/optical_constants/: meson.build
dsharp_opac/optical_constants/draine/: .gitignore  meson.build
dsharp_opac/optical_constants/henning/: meson.build
dsharp_opac/optical_constants/henning/new/: meson.build
dsharp_opac/optical_constants/henning/old/: meson.build
dsharp_opac/optical_constants/jaeger/: .gitignore  links.json  meson.build
dsharp_opac/optical_constants/luca/: meson.build
dsharp_opac/optical_constants/pollack1994/: P94-iron-n.csv  P94-iron.lnk  P94-olivine-n.csv  P94-organics-k.csv  P94-organics-n.csv  P94-orthopyroxene-k.csv  P94-orthopyroxene.lnk  P94-troilite-k.csv  P94-waterice-k.csv  P94-waterice.lnk  make_lnk.py  meson.build
dsharp_opac/optical_constants/preibisch/: .gitignore  links.json  meson.build
dsharp_opac/optical_constants/segelstein_water/: .gitignore  links.json  meson.build
dsharp_opac/optical_constants/testfiles_ricci/: d_test_vacuum30.dust  meson.build
dsharp_opac/optical_constants/warren/: meson.build  warren_1984.txt
dsharp_opac/optical_constants/zubko+1996/: meson.build  zubko_E_ACH2.txt  zubko_E_BE.txt  zubko_k_ACH2.txt  zubko_k_BE.txt
lp_opac/: __init__.py  bhmie.py  bhmie_draine.f90  bhmie_fortran.f90  bhmie_python.py  calldraine.f90  lp_opac.py
lp_opac/distribution/: fit_module.f90
lp_opac/optical_constants/draine/: .gitignore  callindex.out_silD03  eps_suvSil  links.json
lp_opac/optical_constants/henning/new/: links.json
lp_opac/optical_constants/henning/old/: links.json
lp_opac/optical_constants/jaeger/: links.json
lp_opac/optical_constants/pollack1994/: P94-iron-k.csv  P94-olivine-k.csv  P94-olivine.lnk  P94-organics-k.csv  P94-organics-n.csv  P94-organics.lnk  P94-orthopyroxene-n.csv  P94-troilite-k.csv  P94-troilite-n.csv  P94-troilite.lnk  P94-waterice-k.csv  P94-waterice-n.csv  P94-waterice.lnk  make_lnk.py
lp_opac/optical_constants/warren/: .gitignore  links.json  warren_1986_all_temps.txt
lp_opac/optical_constants/zubko+1996/: zubko_n_ACH2.txt
notebooks/: AppendixB.ipynb  Figure1.ipynb  Figure2.ipynb  Figure3.ipynb  Figure4.ipynb  Figure56.ipynb  Figure7.ipynb  Figure8.ipynb  Figure9.ipynb  aux_functions.py  default_opacities_smooth.npz  dsharp_porosity.ipynb  figures.ipynb  header.py  index.ipynb  kPR1.npz  kPR2.npz  opac_widget.py  opacity_examples.ipynb  opacity_package_tests.ipynb  polarization_fraction.ipynb  porosity.ipynb  scattering_phase_functions.ipynb  smoothed_opacities.ipynb
notebooks/data/: default_opacities.npz  default_opacities_extrapolated.npz  default_opacities_smooth.npz  icefree_opacities.npz  icefree_opacities_smooth.npz
optical_constants/draine/: eps_Sil
optical_constants/testfiles_ricci/: dust_opacities.16
optical_constants/zubko+1996/: zubko_n_BE.txt
tests/: default_opacities.ipynb  default_opacities.npz  opacity_package_tests.ipynb  smoothed_opacities.ipynb
