[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'numpy']

[project]
name = 'dsharp_opac'
version = '1.1.11'
description = 'python routines to calculate mie opacities'
readme = { file = 'README.md', content-type = 'text/markdown' }
authors = [
    { name = "Til Birnstiel & DSHARP collaboration", email = "til.birnstiel@lmu.de" },
]
license = { file = 'LICENSE' }
dependencies = ['numpy', 'scipy', 'matplotlib', 'astropy', 'mpmath', 'setuptools']

[project.urls]
Repository = "https://github.com/birnstiel/dsharp_opac/"
