datafiles = files([
    'andrews2009.dat',
    'default_opacities_extrapol.npz',
    'default_opacities_smooth.npz',
    'default_opacities.npz',
    'icefree_opacities_smooth.npz',
    'icefree_opacities.npz',
    'kappa_D01_T100K_p3.5_amax1mm.csv',
    'kataoka_mix.lnk',
    'Kataoka2014-Fig2b-1e-5cm.csv',
    'Kataoka2014-Fig2d-1e-5cm.csv',
    'ricci_compact.npz',
])

py3.install_sources(
    datafiles,
    subdir : 'dsharp_opac/data'
)