datafiles = files([
    'make_lnk.py',
    'P94-iron-k.csv',
    'P94-iron-n.csv',
    'P94-iron.lnk',
    'P94-olivine-k.csv',
    'P94-olivine-n.csv',
    'P94-olivine.lnk',
    'P94-organics-k.csv',
    'P94-organics-n.csv',
    'P94-organics.lnk',
    'P94-orthopyroxene-k.csv',
    'P94-orthopyroxene-n.csv',
    'P94-orthopyroxene.lnk',
    'P94-troilite-k.csv',
    'P94-troilite-n.csv',
    'P94-troilite.lnk',
    'P94-waterice-k.csv',
    'P94-waterice-n.csv',
    'P94-waterice.lnk',
])

py3.install_sources(
    datafiles,
    subdir : 'dsharp_opac/optical_constants/pollack1994'
)